--- a/base-react-proj/src/layout/Toolbar/Toolbar.module.sass
+++ b/base-react-proj/src/layout/Toolbar/Toolbar.module.sass
@@ -1,4 +1,18 @@
+@import  '../../styles/variables.sass'
 .Menu 
-    line-height: 56px!important
+    line-height: 56px
+    background-color: $primary-color
+
+.Menu_Item
+    color: white!important
+
+.Menu_Item_hover:hover,.Menu_Item:hover
+    border-color: $warning-color!important
+
 .Right
     float: right
+    
+.Header
+    height: 58px
+  
+    padding: 0
