--- a/base-react-proj/src/styles/index.sass
+++ b/base-react-proj/src/styles/index.sass
@@ -1,5 +1,10 @@
+@import './variables'
 body,html, .idDiv
     height: 100%
 
 .calc-h
     height: calc(100vh - 58px)!important
+.ant-menu-horizontal
+    border-bottom: none!important
+.ant-menu-horizontal > .ant-menu-item-selected
+    border-bottom: 2px solid $warning-color!important
