--- a/MIS.CA.Web/src/styles/index.sass
+++ b/MIS.CA.Web/src/styles/index.sass
@@ -8,3 +8,12 @@ body,html, .idDiv
     border-bottom: none!important
 .ant-menu-horizontal > .ant-menu-item-selected
     border-bottom: 2px solid $warning-color!important
+
+.Section
+    padding: 40px 20px 20px 10px
+.Link
+    color: #1890ff!important
+    cursor: pointer
+.Link:hover
+    color: darken(#1890ff,10%)!important
+    
